# id_validation

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  test.py  validate.py  validate_southafrica.py  validate_zimbabwe.py
docs/references/: ar.md  be.md  br.md  ca.md  cl.md  co.md  cz.md  dk.md  ec.md  es.md  fi.md  fr.md  hr.md  it.md  lt.md  lv.md  mx.md  nl.md  no.md  pt.md  se.md  si.md  sk.md
src/id_validation/: __init__.py  registry.py  validate.py  validate_belgium.py  validate_botswana.py  validate_finland.py  validate_france.py  validate_italy.py  validate_nigeria.py  validate_norway.py  validate_southafrica.py  validate_spain.py  validate_sweden.py  validate_zimbabwe.py
src/id_validation/validators/: ar_cuit_cuil.py  base.py  bg_egn.py  br_cpf.py  ca_sin.py  cl_rut.py  co_nit.py  cz_rodne_cislo.py  dk_cpr.py  ec_cedula.py  ee_isikukood.py  hr_oib.py  lt_asmenskodas.py  lv_personas_kods.py  (+8 more)
tests/: test_botswana.py  test_nigeria.py  test_southafrica.py  test_validator_factory.py  test_zimbabwe.py
tests/test_international/: test_batch4_americas.py  test_batch4_eu_misc.py  test_batch5_americas.py  test_belgium.py  test_czech.py  test_denmark.py  test_factory_registration_batch4.py  test_factory_registration_batch5.py  test_factory_registration_eu.py  test_finland.py  test_france.py  test_italy.py  test_latvia.py  test_lithuania.py  test_norway.py  test_slovakia.py  test_spain.py  test_sweden.py
tests/test_southafrica/: conftest.py  test_southafrica.py  test_southafrica_apartheid.py
tests/utils/: __init__.py  generators.py
