[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-validation"
version = "0.6.1"
description = "A library to validate and extract information from national id numbers"
readme = "README.md"
authors = [{ name = "Adi Eyal", email = "adi@clearforest.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["id numbers", "validation"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/adieyal/id_validation/"
